--- a/src/App.css
+++ b/src/App.css
@@ -2,28 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body {
-  margin: 0;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+@layer components {
+	.logo {
+		font-size: 24px;
+		font-weight: 500;
+		line-height: 28px;
+		letter-spacing: -0.02em;
+	}
+}
+@layer components {
+	.linkNav {
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 20px;
+		letter-spacing: -0.01em;
+	}
+}
+@layer components {
+	.authNavBtn {
+		font-size: 16px;
+		font-weight: 500;
+		line-height: 20px;
+		letter-spacing: -0.01em;
+	}
+}
+@layer components {
+	.heroBg {
+    background-image: url("../public/img/heroBg.jpg");
+    background-size: cover;
+	}
 }
 
-.content {
-  display: flex;
-  min-height: 100vh;
-  line-height: 1.1;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.content h1 {
-  font-size: 3.6rem;
-  font-weight: 700;
-}
-
-.content p {
-  font-size: 1.2rem;
-  font-weight: 400;
-  opacity: 0.5;
+h1 {
+	color: white;
+	font-size: 70px;
+	font-weight: 500;
+	line-height: 70px;
+	letter-spacing: -0.03em;
+	text-align: left;
 }
