--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,8 +1,25 @@
 .slogan {
-	color: white;
-	font-size: 28px;
+	font-size: 20px;
 	font-weight: 400;
 	line-height: 30px;
 	letter-spacing: -0.02em;
-	text-align: left;
+}
+@media screen and (min-width: 1440px) {
+	.slogan {
+		font-size: 28px;
+		line-height: 30px;
+	}
+}
+
+h1 {
+	font-size: 50px;
+	font-weight: 500;
+	line-height: 50px;
+	letter-spacing: -0.03em;
+}
+@media screen and (min-width: 1440px) {
+	h1 {
+		font-size: 70px;
+		line-height: 70px;
+	}
 }
